# 50.053-Software-Testing

./: .gitignore  CMakeLists.txt  README.md
golang_src/: go.mod  go.sum  main.go  tester_config.json
golang_src/BLE/: ble.go  ble_tester.py
golang_src/CoAP/: coap.go  coap_interesting.go  coap_mutators.go
golang_src/Django/: django.go  django.yaml  django_interesting.go  interesting.go
golang_src/HTML_Logger/: html_logger.go
golang_src/HTML_Logger/formats/: output_style.css
golang_src/IsInteresting/: interesting.go
golang_src/fuzzer/json_mutator/: json_mutator.go
src/: consts.cpp  consts.h  main.cpp
src/BLE_Zephyr/: ble_zephyr.cpp  ble_zephyr.h
src/CoAP_Protocol/: coap_protocol.cpp  coap_protocol.h  fuzz_coap.go
src/Django_Web/: django_web.cpp  django_web.h
src/Django_Web/inputs/: test1.json
src/Django_Web/json_mutator/: json_mutator.cpp  json_mutator.h
src/Django_Web/selenium/: dom_checker.py  selenium_output.txt
src/Django_Web/template_inputs/: add_product.json
src/HTML_Logger/: html_logger.cpp  html_logger.h  output.html  output_style.css
src/HTML_Logger/formats/: header.html
src/fuzzer/: fuzzer.cpp  fuzzer.h
src/fuzzer/json_mutator/: json_mutator.cpp  json_mutator.h
src/fuzzing_responses/: response.txt
